k8s/apps/speedtest/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: speedtest
  labels:
    name: speedtest
    app.kubernetes.io/name: speedtest-tracker
    app.kubernetes.io/instance: speedtest
