k8s/apps/speedtest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest
      app.kubernetes.io/instance: speedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest
        app.kubernetes.io/instance: speedtest
    spec:
      securityContext: {}
      containers:
        - name: speedtest-tracker
          securityContext: {}
          image: "henrywhitaker3/speedtest-tracker:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: speedtest
