k8s/apps/speedtest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
spec:
  type: ClusterIP
  ports:
    - port: 8765
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
